# qtc-cmake-error

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
